# gobbler

./: .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REUSE.toml  main.py  pyproject.toml  run-ingest-test-rayremote.sh  run-ingest-test.sh  run.sh
cake_gobbler/: __init__.py
cake_gobbler/cli/: __init__.py  main.py
cake_gobbler/core/: __init__.py  db_manager.py  embedding_model_manager.py  ingestion.py  pdf_analyzer.py  pdf_processor.py  run_manager.py  text_processor.py  weaviate_manager.py
cake_gobbler/models/: __init__.py  config.py  db_models.py  pdf_models.py
cake_gobbler/utils/: __init__.py  cli_formatter.py  file_utils.py  logging.py  pymupdf_interface.py
